# ProjectTemplateLib

./: CMakeLists.txt  README.md  appveyor.yml
ci/: appveyor_ci_build.ps1  appveyor_ci_test.ps1  appveyor_helpers.ps1
debian/: copyright  package_description
examples/: CMakeLists.txt
examples/Example1/: CMakeLists.txt
examples/Example1/sources/: Example.Example1.cpp
examples/ExampleTemplate/: CMakeLists.txt
examples/ExampleTemplate/sources/: ExampleTemplate.cpp
lib/: CMakeLists.txt
lib/include/: ExamplePublicClass.hpp
lib/sources/: ExamplePrivateClass.cpp  ExamplePrivateClass.hpp  ExamplePublicClass.cpp
lib/templates/: Config.hpp.in
prod/: CMakeLists.txt
prod/include/: ExamplePublicClass.hpp
prod/sources/: ExamplePrivateClass.cpp  ExamplePrivateClass.hpp
test/: CMakeLists.txt  CommonTestTargets.cmake  GenerateTest.cmake
test/ExamplePrivateClass/: CMakeLists.txt  ExamplePrivateClass_test.cpp
test/ExamplePublicClass/: CMakeLists.txt  ExamplePublicClass_test.cpp
test/Mocks/: ExamplePrivateClass_expect.cpp  ExamplePrivateClass_expect.hpp  ExamplePrivateClass_mock.cpp  placeholder.txt
test/TestTemplate/: CMakeLists.txt  TestModule_test.cpp  UnitUnderTest_test.cpp
